--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "c4queue",
+  "name": "D4C",
   "version": "1.0.0",
-  "description": "powerful awaitable queue",
+  "description": "a powerful task queue",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
-  "repository": "https://github.com/grimmer0125/c4queue",
+  "repository": "https://github.com/grimmer0125/D4C",
   "license": "MIT",
   "keywords": [],
   "scripts": {
