--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "D4C",
+  "name": "d4c-queue",
   "version": "1.0.0",
   "description": "a powerful task queue",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
-  "repository": "https://github.com/grimmer0125/D4C",
+  "repository": "https://github.com/grimmer0125/d4c-queue",
   "license": "MIT",
   "keywords": [],
   "scripts": {
