--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
   "name": "d4c-queue",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A task queue receives any function with arguments and do it sequentially, get the return value by await. Support async function, decorators, TypeScript, JavaScript, browser and Node.js.",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
   "repository": "https://github.com/grimmer0125/d4c-queue",
   "license": "MIT",
-  "keywords": [],
-  "scripts": {
+  "keywords": [
+    "task queue",
+    "queue",
+    "async",
+    "await",
+    "synchronized",
+    "synchronization",
+    "lock",
+    "mutex",
+    "decorators",
+    "typescript"
+  ],  "scripts": {
     "build": "run-p build:*",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
