--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "d4c-queue",
-  "version": "1.0.9",
-  "description": "A task queue receives any function with arguments and do it sequentially, get the return value by await. Support async function, promise, decorators, TypeScript, JavaScript, browser, and Node.js.",
+  "version": "1.1.0",
+  "description": "A task queue receives any function with arguments and do it sequentially, get the return value by await. Support sync async function, promise, decorators, TypeScript, JavaScript, browser, and Node.js.",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
@@ -9,6 +9,7 @@
   "license": "MIT",
   "keywords": [
     "task queue",
+    "task-queue",
     "queue",
     "async",
     "await",
@@ -17,7 +18,14 @@
     "lock",
     "mutex",
     "decorators",
-    "typescript"
+    "typescript",
+    "promise", 
+    "sync", 
+    "javascript",
+    "sequential",
+    "job",
+    "node",
+    "browser"
   ],  "scripts": {
     "build": "run-p build:*",
     "build:main": "tsc -p tsconfig.json",
