--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "d4c-queue",
-  "version": "1.1.0",
-  "description": "A task queue receives any function with arguments and do it sequentially, get the return value by await. Support sync async function, promise, decorators, TypeScript, JavaScript, browser, and Node.js.",
+  "version": "1.1.1",
+  "description": "A task queue enenques functions with arguments and do them sequentially. Get return value by await. Support sync/async function, promise, decorator, TypeScript, JavaScript, browser & Node.js.",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
@@ -12,6 +12,8 @@
     "task-queue",
     "queue",
     "async",
+    "async function",
+    "arrow function",    
     "await",
     "synchronized",
     "synchronization",
