--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "d4c-queue",
-  "version": "1.1.10",
-  "description": "A task queue enenques functions with arguments and do them sequentially. Get return value by await. Support sync/async function, promise, decorator, TypeScript, JavaScript, browser & Node.js.",
+  "version": "1.2.0",
+  "description": "A task queue enenques sync/async/promise-returning functions with arguments and do them sequentially. Get return value by await. Support decorator, TypeScript, JavaScript, browser & Node.js.",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
