--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "d4c-queue",
-  "version": "1.2.2",
-  "description": "A task queue enenques sync/async/promise-returning functions with arguments and do them sequentially. Get return value by await. Support decorator, TypeScript, JavaScript, browser & Node.js.",
+  "version": "1.2.3",
+  "description": "A task queue enenques sync/async/promise-returning functions with arguments and does them sequentially. Get return value by await. Support decorator, TypeScript, JavaScript, browser & Node.js.",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
@@ -27,7 +27,9 @@
     "sequential",
     "job",
     "node",
-    "browser"
+    "browser", 
+    "apollo", 
+    "nestjs"
   ],  "scripts": {
     "build": "run-p build:*",
     "build:main": "tsc -p tsconfig.json",
