--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,13 +5,12 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -20,20 +19,28 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-#     - uses: actions/checkout@v2
-#     - name: Use Node.js ${{ matrix.node-version }}
-#       uses: actions/setup-node@v2
-#       with:
-#         node-version: ${{ matrix.node-version }}
-#     - run: npm ci
-#     - run: npm run build --if-present
-#     - run: npm test    
-    - uses: actions/checkout@v2
-    - name: Use Node.js
-      uses: actions/setup-node@v1
-      with:
-        node-version: '12.x'
-    - name: Install dependencies
-      run: yarn --frozen-lockfile
-    - name: Run tests
-      run: yarn test
+      #     - uses: actions/checkout@v2
+      #     - name: Use Node.js ${{ matrix.node-version }}
+      #       uses: actions/setup-node@v2
+      #       with:
+      #         node-version: ${{ matrix.node-version }}
+      #     - run: npm ci
+      #     - run: npm run build --if-present
+      #     - run: npm test
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+      - name: Install dependencies
+        run: yarn --frozen-lockfile
+      - name: Run tests
+        run: yarn test
+      - name: Run tests with coveralls
+        env:
+          REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
+        run: yarn coveralls
+      # - name: Publish to coveralls.io
+      #   uses: coverallsapp/github-action@v1.1.2
+      #   with:
+      #     github-token: ${{ github.token }}
