--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "fix:prettier": "prettier \"src/**/*.ts\" --write",
     "fix:lint": "eslint src --ext .ts --fix",
     "test": "run-s build test:*",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "test:lint": "eslint src --ext .ts",
     "checkspelling": "cspell \"{README.md,.github/*.md,src/**/*.ts}\"",
     "test:unit": "nyc --silent ava",
@@ -75,6 +76,7 @@
     "autobind-decorator": "^2.4.0",
     "ava": "^3.12.1",
     "codecov": "^3.5.0",
+    "coveralls": "^3.1.0",
     "cspell": "^4.1.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.8.0",
