--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [master]
+    branches: [ci_coveralls_integration]
   pull_request:
-    branches: [master]
+    branches: [ci_coveralls_integration]
 
 jobs:
   build:
@@ -31,16 +31,16 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '12.x'
+          node-version: ${{ matrix.node-version }}
       - name: Install dependencies
         run: yarn --frozen-lockfile
       - name: Run tests
         run: yarn test
-      - name: Run tests with coveralls
-        env:
-          REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
-        run: yarn coveralls
-      # - name: Publish to coveralls.io
-      #   uses: coverallsapp/github-action@v1.1.2
-      #   with:
-      #     github-token: ${{ github.token }}
+      - name: Run coverage
+        # env:
+        #   REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
+        run: yarn cov:lcov
+      - name: Publish to coveralls.io
+        uses: coverallsapp/github-action@v1.1.2
+        with:
+          github-token: ${{ github.token }}
