Change back to target master branch in github worlflow

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ci_coveralls_integration]
+    branches: [master]
   pull_request:
-    branches: [ci_coveralls_integration]
+    branches: [master]
 
 jobs:
   build:
