--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "d4c-queue",
-  "version": "1.3.9",
+  "version": "1.3.10",
   "description": "A task queue enenques async/promise-returning/non-async functions with arguments and does them sequentially. Get return value by await. Support decorator, TypeScript, JavaScript, browser & Node.js.",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -65,9 +65,7 @@
   "engines": {
     "node": ">=10"
   },
-  "dependencies": {
-    "denque": "^1.5.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
