--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "d4c-queue",
-  "version": "1.4.5",
-  "description": "Wrap async/promise-returning/sync functions to queue-ready async functions, which are enqueued while being called. Task queues execute original functions sequentially. Plus @synchronized decorator.",
+  "version": "1.5.0",
+  "description": "Wrap a async/promise-returning/sync functions as a queue-ready async function, enqueued while being called. It's convenient to reuse it. Task queues execute original functions sequentially (synchronization mode) by default and support concurrency mode, @synchronized decorator, Node.js & Browser.",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
@@ -31,7 +31,15 @@
     "node",
     "browser",
     "apollo",
-    "nestjs"
+    "nestjs",
+    "rate",
+    "ratelimit",
+    "limit",
+    "limited",
+    "throttle",
+    "throat",
+    "concurrency",
+    "fifo"
   ],
   "scripts": {
     "build": "run-p build:*",
