--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "d4c-queue",
-  "version": "1.5.1",
-  "description": "A task queue execute tasks sequentially or concurrently. Wrap a async/promise-returning/sync functions as a queue-ready async function for convenient reuse. Support @synchronized decorator, Node.js, Browser, JavaScript and TypeScript.",
+  "version": "1.5.2",
+  "description": "A task queue execute tasks sequentially or concurrently. Wrap a async/promise-returning/sync functions as a queue-ready async function for convenient reuse. Support passing arguments/getting return value, @synchronized decorator, Node.js, Browser, JS, TS.",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
