--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "d4c-queue",
-  "version": "1.5.4",
+  "version": "1.5.5",
   "description": "A task queue executes tasks sequentially or concurrently. Wrap an async/promise-returning/sync function as a queue-ready async function for convenient reuse. Support passing arguments/getting return value, @synchronized decorator, Node.js, Browser, JS, TS.",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -18,6 +18,7 @@
     "arrow function",
     "await",
     "synchronized",
+    "synchronous",
     "synchronization",
     "lock",
     "mutex",
@@ -42,7 +43,8 @@
     "concurrent",
     "fifo",
     "worker",
-    "asynchronous"
+    "asynchronous",
+    "tasks"
   ],
   "scripts": {
     "build": "run-p build:*",
