Improve keyword and refactor code, bump to 1.5.8

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "d4c-queue",
-  "version": "1.5.7",
+  "version": "1.5.8",
   "description": "A task queue executes tasks sequentially or concurrently. Wrap an async/promise-returning/sync function as a queue-ready async function for convenient reuse. Support passing arguments/getting return value, @synchronized decorator, Node.js, Browser, JS, TS.",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -8,43 +8,45 @@
   "repository": "https://github.com/grimmer0125/d4c-queue",
   "license": "MIT",
   "keywords": [
-    "task",
-    "task-runner",
     "task queue",
-    "task-queue",
-    "queue",
     "async",
-    "async function",
-    "arrow function",
-    "await",
-    "synchronized",
-    "synchronous",
-    "synchronization",
-    "lock",
-    "mutex",
-    "decorators",
-    "typescript",
     "promise",
-    "sync",
-    "javascript",
+    "await",
     "sequential",
-    "job",
+    "synchronized",
+    "decorator",
+    "lock",
+    "concurrency",
+    "throttle",
+    "typescript",
+    "javascript",
     "node",
     "browser",
+    "rate-limit",
     "apollo",
     "nestjs",
+    "asynchronous",
+    "worker",
+    "async function",
+    "concurrent",
+    "synchronous",
+    "job",
+    "sync",
+    "mutex",
+    "synchronization",
+    "queue",
+    "fifo",
     "rate",
     "ratelimit",
     "limit",
     "limited",
-    "throttle",
     "throat",
-    "concurrency",
-    "concurrent",
-    "fifo",
-    "worker",
-    "asynchronous",
-    "tasks"
+    "task",
+    "arrow function",
+    "task-queue",
+    "tasks",
+    "task-runner"
+
   ],
   "scripts": {
     "build": "run-p build:*",
