--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "javascript",
     "node",
     "browser",
-
     "rate-limit",
     "apollo",
     "nestjs",
@@ -48,7 +47,6 @@
     "task-queue",
     "tasks",
     "task-runner"
-
   ],
   "scripts": {
     "build": "run-p build:*",
@@ -74,7 +72,7 @@
     "doc": "run-s doc:html && open-cli build/docs/index.html",
     "doc:html": "typedoc src/ --exclude **/*.spec.ts --target ES6  --exclude src/lib/Queue.ts --excludeNotExported --out build/docs",
     "doc:json": "typedoc src/ --exclude **/*.spec.ts --target ES6 --mode file --json build/docs/typedoc.json",
-    "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
+    "doc:publish": "touch build/docs/.nojekyll && gh-pages -m \"[ci skip] Updates\" -d build/docs -t",
     "version": "standard-version",
     "reset-hard": "git clean -dfx && git reset --hard && yarn",
     "prepare-release": "run-s reset-hard test cov:check doc:html version doc:publish"
@@ -105,6 +103,7 @@
     "open-cli": "^6.0.1",
     "prettier": "^2.1.1",
     "standard-version": "^9.0.0",
+    "touch": "^3.1.0",
     "ts-node": "^9.0.0",
     "typedoc": "^0.19.0",
     "typescript": "4.2.3"
