--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "cov:send": "run-s cov:lcov && codecov",
     "cov:check": "nyc report && nyc check-coverage --lines 100 --functions 100 --branches 100",
     "doc": "run-s doc:html && open-cli build/docs/index.html",
-    "doc:html": "typedoc src/ --exclude **/*.spec.ts --target ES6  --exclude src/lib/Queue.ts --excludeNotExported --out build/docs",
+    "doc:html": "typedoc src/ --exclude **/*.spec.ts --target ES6  --exclude src/lib/Queue.ts --excludePrivate --excludeNotExported --out build/docs",
     "doc:json": "typedoc src/ --exclude **/*.spec.ts --target ES6 --mode file --json build/docs/typedoc.json",
     "doc:publish": "touch build/docs/.nojekyll && gh-pages -m \"[ci skip] Updates\" -d build/docs -t",
     "version": "standard-version",
